--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.87MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-423.1KB/s(Youtube:不良林), server: cdn1.myuuusss.com, port: 30041, type: ss, cipher: chacha20-ietf-poly1305, password: b195963c-2631-442d-ab3a-6e78df25d904}
-  - {name: 🇺🇸 美国-2.85MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: f0de3134-aef4-45b5-a135-3a82321bbac6, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-671.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-11.45MB/s(Youtube:不良林), server: yp-cm-002.omo-m0m.com, port: 5703, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: yp-cm-002.omo-m0m.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.59MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.05MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇺🇸 美国-325.9KB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-2.11MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇩🇪 德国-1.19MB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
+  - {name: 🇺🇸 美国-13.54MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-769.8KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇭🇰 香港-1.54MB/s(Youtube:不良林), server: 47.243.87.171, port: 443, type: vmess, uuid: 4af38112-0854-48d8-9387-5ece4078a599, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /szGxn, ws-headers: {Host: 47.243.87.171}}
+  - {name: 🇺🇸 美国-5.06MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-333.0KB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.33MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.76MB/s(Youtube:不良林), server: 5.183.32.187, port: 22610, type: vmess, uuid: 46a2f46a-c56f-487b-b2c9-b4204bf8021e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.03MB/s(Youtube:不良林), server: 143.198.130.21, port: 42382, type: vmess, uuid: 03b452a7-907b-4f77-8ca4-60250cc835bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.27MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇯🇵 日本-1.38MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-671.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-325.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.11MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-769.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-671.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-325.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.11MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-769.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-671.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-325.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.11MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-769.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.54MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-671.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-325.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.11MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-769.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-671.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-325.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.11MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-769.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-671.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-325.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.11MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-769.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-423.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-671.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-325.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.11MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-769.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
