--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.38MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.06MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.44MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-769.8KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇨🇳 中国-1.27MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-5.15MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.05MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-313.5KB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.70MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-2.79MB/s(Youtube:不良林), server: 47.243.87.171, port: 443, type: vmess, uuid: 4af38112-0854-48d8-9387-5ece4078a599, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /szGxn, ws-headers: {Host: 47.243.87.171}}
   - {name: 🇺🇸 美国-4.77MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.34MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.17MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇨🇳 中国-587.1KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
   - {name: 🇺🇸 美国-4.86MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.48MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-769.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
       - 🇨🇳 中国-587.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-769.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
       - 🇨🇳 中国-587.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-769.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
       - 🇨🇳 中国-587.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-769.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
       - 🇨🇳 中国-587.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-769.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
       - 🇨🇳 中国-587.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-769.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
       - 🇨🇳 中国-587.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-769.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
       - 🇨🇳 中国-587.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
