--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.27MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-5.05MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-313.5KB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.70MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-2.79MB/s(Youtube:不良林), server: 47.243.87.171, port: 443, type: vmess, uuid: 4af38112-0854-48d8-9387-5ece4078a599, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /szGxn, ws-headers: {Host: 47.243.87.171}}
-  - {name: 🇺🇸 美国-4.77MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.17MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-587.1KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-4.86MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.48MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-9.34MB/s(Youtube:不良林), server: jgwcc2.gaox.ml, port: 443, type: trojan, password: 9c822f05-cfdc-479a-9534-60f3d4127435, sni: jgwcc2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.70MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.11MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.74MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.62MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.47MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.39MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.33MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.32MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-587.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.32MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-587.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.32MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-587.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.32MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-587.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.32MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-587.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.32MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-587.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.32MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.17MB/s(Youtube:不良林)
-      - 🇨🇳 中国-587.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.34MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.47MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.32MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
